syntax = "proto3";

package rental.v1;

option go_package= "coolcar/rental/api/gen/v1;rentalpb";

message CreateTripRequest {
  string start = 1;
}

message CreateTripResponse {
  string access_token=1;
  int32 expires_in=2;
}

service TripService {
  rpc CreateTrip(CreateTripRequest) returns (CreateTripResponse);
}
